--- a/indexnew.html
+++ b/indexnew.html
@@ -16,7 +16,7 @@
     <!-- Title -->
     <title>PROGRESS</title>
   </head>
-  <body>
+  <body style="min-height: 1000px">
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
       <div class="container container-headfoot">
@@ -36,97 +36,101 @@
           class="collapse navbar-collapse text-center"
           id="navbarNavDropdown"
         >
-          <ul class="navbar-nav mx-auto fs-5">
-            <li class="nav-item">
+          <ul class="navbar-nav mx-auto fs-5 fw-bold">
+            <li class="nav-item mx-3">
               <a class="nav-link active fw-bolder" aria-current="page" href="#"
-                >Beranda</a
+                >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product/">Produk</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="services/"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Layanan Jasa
-              </a>
-              <ul
-                class="dropdown-menu mt-3 text-center"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <hr class="m-0" />
-                <li>
-                  <a class="dropdown-item" href="services/#jasa-videografi"
-                    >Jasa Videografi</a
-                  >
-                </li>
-                <hr class="m-0" />
-                <li>
-                  <a class="dropdown-item" href="services/jasa-fotografi"
-                    >Jasa Fotografi</a
-                  >
-                </li>
-                <hr class="m-0" />
-              </ul>
+              <a class="nav-link mx-3" href="#">Class</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="portfolio/">Portfolio</a>
+              <a class="nav-link mx-3" href="#">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="information/loker.html">Info Loker</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact/">Kontak</a>
+              <a class="nav-link mx-3" href="#">Contact</a>
             </li>
           </ul>
         </div>
-        <div class="list-sosmed d-none d-lg-block">
-          <ul>
-            <li>
-              <a
-                target="_blank"
-                rel="noopener"
-                href="https://www.instagram.com/chs_portfolio/"
-                aria-label="Instagram CAPTURE HISTORY SUDIO"
-              >
-                <img src="assets/img/img-icon/instagram.png" alt="instagram" />
-              </a>
-            </li>
-            <li>
-              <a
-                target="_blank"
-                rel="noopener"
-                href="https://twitter.com/@embi666"
-                aria-label="Twitter CAPTURE HISTORY SUDIO"
-              >
-                <img src="assets/img/img-icon/twitter.png" alt="twitter" />
-              </a>
-            </li>
-            <li>
-              <a
-                target="_blank"
-                rel="noopener"
-                href="https://www.facebook.com/CaptureHistoryStudio"
-                aria-label="Facebook CAPTURE HISTORY SUDIO"
-              >
-                <img src="assets/img/img-icon/facebook.png" alt="instagram" />
-              </a>
-            </li>
-          </ul>
+        <div class="d-none d-lg-block">
+          <a href="http://" class="text-muted text-decoration-none fw-bolder"
+            >ID/EN</a
+          >
         </div>
       </div>
     </nav>
     <!-- Navbar End -->
 
     <!-- Home Start -->
-    <section id="home">
-      <div class="container"></div>
+    <section
+      id="home"
+      class="w-100 d-flex align-items-center justify-content-center"
+      style="
+        background-image: url(img/Home\ 1.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        height: 757px;
+      "
+    >
+      <div
+        class="overlay"
+        style="
+          position: absolute;
+          width: 100%;
+          height: 757px;
+          background: linear-gradient(
+            rgba(87, 87, 87, 0.7),
+            rgba(216, 216, 216, 0.7)
+          );
+          z-index: 1;
+        "
+      ></div>
+      <div class="container text-center" style="z-index: 2">
+        <div class="row">
+          <div
+            class="col"
+            style="
+              font-family: 'Inter';
+              font-style: normal;
+              font-weight: 600;
+              font-size: 32px;
+              line-height: 39px;
+              text-align: center;
+              color: #ffffff;
+            "
+          >
+            <h1>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              vulputate libero et velit interdum, ac aliquet odio mattis. Class
+              aptent taciti sociosqu ad litora torquent per conubia nostra, per
+              inceptos himenaeos. Curabitur tempus urna at turpis condimentum
+              lobortis.
+            </h1>
+          </div>
+        </div>
+        <br /><br />
+        <div class="row">
+          <div class="col">
+            <a href="#">
+              <button
+                class="btn-home"
+                style="
+                  width: 334px;
+                  height: 75px;
+                  background: #d9d9d9;
+                  border-radius: 35px;
+                  border: none;
+                "
+              >
+                Pelajari Lebih Lanjut
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- Home End -->
 
