--- a/indexnew.html
+++ b/indexnew.html
@@ -18,7 +18,7 @@
   </head>
   <body style="min-height: 1000px">
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
       <div class="container container-headfoot">
         <a class="navbar-brand fw-bold fs-2" href="index.html">Progress</a>
         <button
@@ -66,14 +66,6 @@
     <section
       id="home"
       class="w-100 d-flex align-items-center justify-content-center"
-      style="
-        background-image: url(img/Home\ 1.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        height: 757px;
-      "
     >
       <div
         class="overlay"
@@ -83,7 +75,7 @@
           height: 757px;
           background: linear-gradient(
             rgba(87, 87, 87, 0.7),
-            rgba(216, 216, 216, 0.7)
+            rgba(32, 32, 32, 0.7)
           );
           z-index: 1;
         "
@@ -135,14 +127,106 @@
     <!-- Home End -->
 
     <!-- News Start -->
-    <section id="news">
-      <div class="container"></div>
+    <section
+      id="news"
+      class="section-padding"
+      style="background-color: #132c33"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1 class="text-center text-white mb-5">Berita Terbaru</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div
+            class="col w-100 d-flex align-items-center justify-content-center my-5"
+          >
+            <div class="img-news">
+              <img src="img/1.jpg" alt="" class="img-fluid" />
+              <p class="mt-3 mx-3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                vulputate libero et velit interdum, ac aliquet odio mattis.
+                Class aptent taciti sociosqu ad litora torquent per conubia
+                nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
+                condimentum lobortis. Ut commodo efficitur neque.
+              </p>
+              <a href="" class="mx-3">
+                <button class="btn">read more...</button>
+              </a>
+            </div>
+          </div>
+          <div
+            class="col w-100 d-flex align-items-center justify-content-center"
+          >
+            <div class="img-news">
+              <img src="img/2.jpg" alt="" class="img-fluid" />
+              <p class="mt-3 mx-3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                vulputate libero et velit interdum, ac aliquet odio mattis.
+                Class aptent taciti sociosqu ad litora torquent per conubia
+                nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
+                condimentum lobortis. Ut commodo efficitur neque.
+              </p>
+              <a href="" class="mx-3">
+                <button class="btn">read more...</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- News End -->
 
     <!-- Event Start -->
-    <section id="event">
-      <div class="container"></div>
+    <section
+      id="event"
+      class="section-padding"
+      style="background-color: darkslategray"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1 class="text-center text-white mb-5">Event</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div
+            class="col w-100 d-flex align-items-center justify-content-center my-5"
+          >
+            <div class="img-news">
+              <img src="img/1.jpg" alt="" class="img-fluid" />
+              <p class="mt-3 mx-3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                vulputate libero et velit interdum, ac aliquet odio mattis.
+                Class aptent taciti sociosqu ad litora torquent per conubia
+                nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
+                condimentum lobortis. Ut commodo efficitur neque.
+              </p>
+              <a href="" class="mx-3">
+                <button class="btn">read more...</button>
+              </a>
+            </div>
+          </div>
+          <div
+            class="col w-100 d-flex align-items-center justify-content-center"
+          >
+            <div class="img-news">
+              <img src="img/2.jpg" alt="" class="img-fluid" />
+              <p class="mt-3 mx-3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                vulputate libero et velit interdum, ac aliquet odio mattis.
+                Class aptent taciti sociosqu ad litora torquent per conubia
+                nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
+                condimentum lobortis. Ut commodo efficitur neque.
+              </p>
+              <a href="" class="mx-3">
+                <button class="btn">read more...</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- Event End -->
 
@@ -153,9 +237,70 @@
     <!-- Contact End -->
 
     <!-- Footer Start -->
-    <section id="footer">
+    <!-- <section id="footer">
       <div class="container"></div>
-    </section>
+    </section> -->
+    <footer
+      class="footer mt-5 pt-5 text-decoration-none"
+      style="background-color: beige"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col1">
+            <h3 class="footer-brand"><span>MY</span>FURNITURE</h3>
+            <a href="#" class="mt-3 d-inline-block">help@domain.com</a>
+            <a href="#" class="d-block">+62852738738722</a>
+            <div class="icon-footer mt-3">
+              <a href="#"><i class="bx bxl-whatsapp"></i></a>
+              <a href="#"><i class="bx bxl-instagram-alt mx-2"></i></a>
+              <a href="#"><i class="bx bxl-facebook-circle"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-3 col2 mt-4 mt-md-0">
+            <h3>Services</h3>
+            <ul class="ps-0">
+              <li><a href="#">House Plant</a></li>
+              <li><a href="#">Garden Plant</a></li>
+              <li><a href="#">Vase</a></li>
+              <li><a href="#">Fertilizer</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2 col-md-3 col3 mt-4 mt-md-0">
+            <h3>Information</h3>
+            <ul class="ps-0">
+              <li><a href="#">Office Hours</a></li>
+              <li><a href="#">Requirements</a></li>
+              <li><a href="#">About us</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2 col-md-3 col4 mt-4 mt-lg-0">
+            <h3>Helpfull Link</h3>
+            <ul class="ps-0">
+              <li><a href="#">Service</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Terms & Condition</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2 col-md-3 col5 mt-4 mt-lg-0">
+            <h3>Address</h3>
+            <p class="text-white">
+              Jl Gatot Subroto No. 123 Blok. A23 Malang, Jawa Timur
+            </p>
+
+            <a href="#">Google Maps</a>
+          </div>
+        </div>
+        <div class="row mt-3">
+          <div class="col text-center">
+            <p class="text-white">
+              &copy;Copyright 2021 All Right Reserve | Built by
+              <a href="#">Mardha Mardiya</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- Footer End -->
 
     <script
