--- a/indexnew.html
+++ b/indexnew.html
@@ -12,9 +12,9 @@
             crossorigin="anonymous"
         />
         <!-- Box Icon -->
-        <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+        <link href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" rel="stylesheet" />
         <!-- My CSS -->
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/stylenew.css" />
         <!-- Title -->
         <title>PROGRESS</title>
     </head>
@@ -23,8 +23,8 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
             <div class="container container-headfoot">
-                <a class="navbar-brand fw-bold fs-2" href="index.html">
-                    <img src="img/progress.png" class="logo" alt="">
+                <a class="navbar-brand fw-bold fs-2 w-25" href="index.html">
+                    <img src="img/progress.png" class="logo" alt="" />
                 </a>
                 <button
                     class="navbar-toggler"
@@ -35,15 +35,14 @@
                     aria-expanded="false"
                     aria-label="Toggle navigation"
                 >
-                <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div
-                    class="collapse navbar-collapse text-center"
-                    id="navbarNavDropdown"
-                >
+                <div class="collapse navbar-collapse text-center w-50" id="navbarNavDropdown">
                     <ul class="navbar-nav mx-auto fs-5 fw-bold">
                         <li class="nav-item mx-3">
-                            <a class="nav-link active fw-bolder" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active fw-bolder" aria-current="page" href="#"
+                                >Home</a
+                            >
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-3" href="#">Class</a>
@@ -56,7 +55,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="d-none d-lg-block">
+                <div class="d-none d-lg-block w-25 text-end">
                     <a href="http://" class="text-muted text-decoration-none fw-bolder">ID/EN</a>
                 </div>
             </div>
@@ -64,24 +63,17 @@
         <!-- Navbar End -->
 
         <!-- Home Start -->
-        <section
-            id="home"
-            class="w-100 d-flex align-items-center justify-content-center"
-        >
+        <section id="home" class="w-100 d-flex align-items-center justify-content-center">
             <div
                 class="overlay"
                 style="
                     position: absolute;
                     width: 100%;
                     height: 757px;
-                    background: linear-gradient(
-                        rgba(87, 87, 87, 0.7),
-                        rgba(32, 32, 32, 0.7)
-                    );
+                    background: linear-gradient(rgba(87, 87, 87, 0.7), rgba(32, 32, 32, 0.7));
                     z-index: 1;
                 "
-            >
-            </div>
+            ></div>
             <div class="container text-center" style="z-index: 2">
                 <div class="row">
                     <div
@@ -97,11 +89,10 @@
                         "
                     >
                         <h1>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                            vulputate libero et velit interdum, ac aliquet odio mattis. Class
-                            aptent taciti sociosqu ad litora torquent per conubia nostra, per
-                            inceptos himenaeos. Curabitur tempus urna at turpis condimentum
-                            lobortis.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate
+                            libero et velit interdum, ac aliquet odio mattis. Class aptent taciti
+                            sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                            Curabitur tempus urna at turpis condimentum lobortis.
                         </h1>
                     </div>
                 </div>
@@ -109,18 +100,18 @@
                 <div class="row">
                     <div class="col">
                         <a href="#">
-                        <button
-                            class="btn-home"
-                            style="
-                                width: 334px;
-                                height: 75px;
-                                background: #d9d9d9;
-                                border-radius: 35px;
-                                border: none;
-                            "
-                        >
-                            Pelajari Lebih Lanjut
-                        </button>
+                            <button
+                                class="btn-home"
+                                style="
+                                    width: 334px;
+                                    height: 75px;
+                                    background: #d9d9d9;
+                                    border-radius: 35px;
+                                    border: none;
+                                "
+                            >
+                                Pelajari Lebih Lanjut
+                            </button>
                         </a>
                     </div>
                 </div>
@@ -129,10 +120,7 @@
         <!-- Home End -->
 
         <!-- News Start -->
-        <section
-            id="news"
-            class="section-padding"
-        >
+        <section id="news" class="section-padding">
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -140,34 +128,30 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div
-                        class="col w-100 d-flex align-items-center justify-content-center my-5"
-                    >
+                    <div class="col w-100 d-flex align-items-center justify-content-center my-5">
                         <div class="img-news">
                             <img src="img/1.jpg" alt="" class="img-fluid" />
                             <p class="mt-3 mx-3">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                                vulputate libero et velit interdum, ac aliquet odio mattis.
-                                Class aptent taciti sociosqu ad litora torquent per conubia
-                                nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
-                                condimentum lobortis. Ut commodo efficitur neque.
+                                vulputate libero et velit interdum, ac aliquet odio mattis. Class
+                                aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                                inceptos himenaeos. Curabitur tempus urna at turpis condimentum
+                                lobortis. Ut commodo efficitur neque.
                             </p>
                             <a href="" class="mx-3">
                                 <button class="btn">Read More...</button>
                             </a>
                         </div>
                     </div>
-                    <div
-                        class="col w-100 d-flex align-items-center justify-content-center"
-                    >
+                    <div class="col w-100 d-flex align-items-center justify-content-center my-5">
                         <div class="img-news">
                             <img src="img/2.jpg" alt="" class="img-fluid" />
                             <p class="mt-3 mx-3">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                                vulputate libero et velit interdum, ac aliquet odio mattis.
-                                Class aptent taciti sociosqu ad litora torquent per conubia
-                                nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
-                                condimentum lobortis. Ut commodo efficitur neque.
+                                vulputate libero et velit interdum, ac aliquet odio mattis. Class
+                                aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                                inceptos himenaeos. Curabitur tempus urna at turpis condimentum
+                                lobortis. Ut commodo efficitur neque.
                             </p>
                             <a href="" class="mx-3">
                                 <button class="btn">Read More...</button>
@@ -180,67 +164,82 @@
         <!-- News End -->
 
         <!-- Event Start -->
-        <section
-        id="event"
-        class="section-padding"
-        >
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-center text-white mb-5">Event</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div
-                    class="col w-100 d-flex align-items-center justify-content-center my-5"
-                >
-                    <div class="img-news">
-                        <img src="img/1.jpg" alt="" class="img-fluid" />
-                        <p class="mt-3 mx-3">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                            vulputate libero et velit interdum, ac aliquet odio mattis.
-                            Class aptent taciti sociosqu ad litora torquent per conubia
-                            nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
-                            condimentum lobortis. Ut commodo efficitur neque.
-                        </p>
-                        <a href="" class="mx-3">
-                            <button class="btn">Read More...</button>
-                        </a>
+        <section id="event" class="section-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="text-center text-white mb-5">Event</h1>
                     </div>
                 </div>
-                <div
-                    class="col w-100 d-flex align-items-center justify-content-center"
-                >
-                    <div class="img-news">
-                        <img src="img/2.jpg" alt="" class="img-fluid" />
-                        <p class="mt-3 mx-3">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                            vulputate libero et velit interdum, ac aliquet odio mattis.
-                            Class aptent taciti sociosqu ad litora torquent per conubia
-                            nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
-                            condimentum lobortis. Ut commodo efficitur neque.
-                        </p>
-                        <a href="" class="mx-3">
-                            <button class="btn">Read More...</button>
-                        </a>
+                <div class="row">
+                    <div class="col w-100 d-flex justify-content-center align-content-center my-5">
+                        <div class="border-event">
+                            <div class="img-event">
+                                <img src="img/1.jpg" alt="" class="img-fluid" />
+                                <p class="mt-3 mx-3">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                                    vulputate libero et velit interdum, ac aliquet odio mattis.
+                                    Class aptent taciti sociosqu ad litora torquent per conubia
+                                    nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
+                                    condimentum lobortis. Ut commodo efficitur neque.
+                                </p>
+                                <a href="" class="mx-3">
+                                    <button class="btn">Read More...</button>
+                                </a>
+                            </div>
+                        </div>
                     </div>
+                    <div class="col w-100 d-flex justify-content-center align-content-center my-5">
+                        <div class="border-event">
+                            <div class="img-event">
+                                <img src="img/1.jpg" alt="" class="img-fluid" />
+                                <p class="mt-3 mx-3">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                                    vulputate libero et velit interdum, ac aliquet odio mattis.
+                                    Class aptent taciti sociosqu ad litora torquent per conubia
+                                    nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
+                                    condimentum lobortis. Ut commodo efficitur neque.
+                                </p>
+                                <a href="" class="mx-3">
+                                    <button class="btn">Read More...</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col w-100 d-flex justify-content-center align-content-center my-5">
+                        <div class="border-event">
+                            <div class="img-event">
+                                <img src="img/1.jpg" alt="" class="img-fluid" />
+                                <p class="mt-3 mx-3">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                                    vulputate libero et velit interdum, ac aliquet odio mattis.
+                                    Class aptent taciti sociosqu ad litora torquent per conubia
+                                    nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
+                                    condimentum lobortis. Ut commodo efficitur neque.
+                                </p>
+                                <a href="" class="mx-3">
+                                    <button class="btn">Read More...</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
         </section>
         <!-- Event End -->
 
         <!-- Contact Start -->
         <section id="contact">
-        <div class="container"></div>
+            <div class="container"></div>
         </section>
         <!-- Contact End -->
 
         <!-- Footer Start -->
         <footer class="footer mt-5 pt-5">
             <div class="container">
-                <div class="row">
+                <div class="row mb-5">
                     <div class="col-lg-4 col-md-6 col1">
-                        <img src="img/progress.png" class="logo" alt="">
+                        <img src="img/progress.png" class="logo" alt="" />
                         <!-- <div class="icon-footer mt-3">
                             <a href="#"><i class='bx bxl-whatsapp'></i></a>
                             <a href="#"><i class='bx bxl-instagram-alt mx-2'></i></a>
@@ -275,31 +274,38 @@
                     </div>
                     <div class="col-lg-2 col-md-3 col5 mt-4 mt-lg-0">
                         <h3>Address</h3>
-                        <p class="text-white">Jl. Raya Puputan
-                            No. 36, Dangin Puri Kelod, Kecamatan Denpasar Tim,
-                            Kota Denpasar, Bali
+                        <p class="text-white">
+                            Jl. Raya Puputan No. 36, Dangin Puri Kelod, Kecamatan Denpasar Tim, Kota
+                            Denpasar, Bali
                         </p>
-                        <a href="https://goo.gl/maps/tVwviZpErjoFcRz67" target="_blank">Google Maps</a>
+                        <a href="https://goo.gl/maps/tVwviZpErjoFcRz67" target="_blank"
+                            >Google Maps</a
+                        >
                     </div>
                 </div>
+                <hr class="text-white" />
                 <div class="row mt-3">
                     <div class="col text-center">
-                        <p class="text-white">&copy;Copyright 2022 All Right Reserve | Built by UKM PROGRESS</p>
+                        <p class="text-white">
+                            &copy;Copyright 2022 All Right Reserve | Built by UKM PROGRESS
+                        </p>
                     </div>
                 </div>
             </div>
         </footer>
         <!-- Footer End -->
 
+        <!-- Javascript Bootstrap Start -->
         <script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"
+            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+            crossorigin="anonymous"
         ></script>
         <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"
         ></script>
+        <!-- Javascript Bootstrap End    -->
     </body>
 </html>
