--- a/indexnew.html
+++ b/indexnew.html
@@ -19,7 +19,7 @@
         <title>PROGRESS</title>
     </head>
 
-    <body style="min-height: 1000px">
+    <body>
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
             <div class="container container-headfoot">
@@ -230,13 +230,58 @@
 
         <!-- Contact Start -->
         <section id="contact">
-            <div class="container"></div>
+            <div
+                class="container section-padding w-100 d-flex align-items-center justify-content-center"
+            >
+                <div class="row">
+                    <div class="col">
+                        <div class="form-contact">
+                            <form action="" method="get">
+                                <div class="form">
+                                    <div class="mb-3">
+                                        <label for="exampleFormControlInput1" class="form-label"
+                                            >Email address</label
+                                        >
+                                        <input
+                                            type="email"
+                                            class="form-control"
+                                            id="exampleFormControlInput1"
+                                            placeholder="name@example.com"
+                                        />
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="exampleFormControlTextarea1" class="form-label"
+                                            >Example textarea</label
+                                        >
+                                        <textarea
+                                            class="form-control"
+                                            id="exampleFormControlTextarea1"
+                                            rows="3"
+                                        ></textarea>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.192459501125!2d115.22439021537227!3d-8.673239590690342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd240f24881c587%3A0xe8413f111e0aa096!2sInstitut%20Teknologi%20Dan%20Bisnis%20STIKOM%20BALI!5e0!3m2!1sid!2sid!4v1659707213799!5m2!1sid!2sid"
+                            width="700"
+                            height="420"
+                            style="border: 0"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"
+                        ></iframe>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- Contact End -->
 
         <!-- Footer Start -->
-        <footer class="footer mt-5 pt-5">
-            <div class="container">
+        <footer id="footer">
+            <div class="container pt-5">
                 <div class="row mb-5">
                     <div class="col-lg-4 col-md-6 col1">
                         <img src="img/progress.png" class="logo" alt="" />
