--- a/class.html
+++ b/class.html
@@ -66,7 +66,7 @@
               <div class="card-body">
                 <h5 class="card-title text-center">WEB DEVELOPER</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-secondary">Go somewhere</a>
               </div>
             </div>
           </div>
@@ -76,7 +76,7 @@
               <div class="card-body">
                 <h5 class="card-title text-center">WEB DEVELOPER</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-secondary">Go somewhere</a>
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
               <div class="card-body">
                 <h5 class="card-title text-center">WEB DEVELOPER</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-secondary">Go somewhere</a>
               </div>
             </div>
           </div>
@@ -100,7 +100,7 @@
               <div class="card-body">
                 <h5 class="card-title text-center">WEB DEVELOPER</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-secondary">Go somewhere</a>
               </div>
             </div>
           </div>
