Update File 3 Menu

--- a/class.html
+++ b/class.html
@@ -74,7 +74,7 @@
 
     <!-- class Start -->
     <div class="classprogress">
-      <div data-aos="fade" class="judulkelas pt-5 text-white mb-5">
+      <div data-aos="zoom-out" class="judulkelas pt-5 text-white mb-5">
         <h1 class="text-center">Daftar Kelas Progress</h1>
       </div>
       <div class="container">
