--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <section id="news" class="section-padding">
       <div class="container">
         <div class="row">
-          <div data-aos="fade" class="col">
+          <div data-aos="zoom-out" class="col">
             <h1 class="text-center h-head">Berita Terkait Proggress</h1>
           </div>
         </div>
