--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
     <section id="struktur" class="section-padding">
       <div class="container">
         <div class="row">
-          <div class="col" style="color: #ffff" data-aos="fade">
+          <div class="col" style="color: #ffff" data-aos="zoom-out">
             <h1 class="text-center fw-bold">Struktur Organisasi</h1>
           </div>
         </div>
